--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stile.css">
+    <link rel="stylesheet" href="/static/stile.css">
     <title>Sign in pop up</title>
     <script type="application/javascript">
         function validateSign() {
