--- a/templates/loginpage.html
+++ b/templates/loginpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/stile.css">
+    <link rel="stylesheet" href="static/stile.css">
     <title>Log in pop up</title>
     <script type="application/javascript">
       function validateLogin() {
