--- a/templates/reg_page.html
+++ b/templates/reg_page.html
@@ -3,34 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/stile.css">
+    <link rel="stylesheet" href="static/stile.css">
     <title>Sign in pop up</title>
     <script type="application/javascript">
         function validateSign() {
-            if(document.registr.Name.value==""){
+            var nome=document.registr.Name.value;
+            var cognome=document.registr.Surname.value;
+            var email=document.registr.email.value;
+            var password=document.registr.pwd.value;
+            var facolta="placeholder";
+            var passwordPattern=/^(?=.*[A-Z])(?=.*\d)(?=.*[*\/\-+!%&$]).{4,}$/;
+            if(nome==""){
                 alert("Inserire Nome");
                 return false;
-            }else if(document.registr.Surname.value==""){
+            }else if(cognome==""){
                 alert("Inserire Cognome");
                 return false;
-            }else if (document.registr.email.value==""){
+            }else if (email==""){
                 alert("Inserire l'email");
                 return false;
-            }else if(document.registr.pwd.value==""){
+            }else if(email.indexOf('@')===-1){
+                alert("Formato email errato")
+            }else if(password==""){
                 alert("Inserire la password");
                 return false;
-            }else if(document.registr.pwd.value!=document.registr.confpwd.value){
+            }else if(!passwordPattern.test(password)){
+                alert("La password deve contenere almeno 4 caratteri, di cui almeno una lettera maiuscola, una minuscola, un numero e un simbolo");
+                return false;
+            }else if(password!=document.registr.confpwd.value){
                 alert("password differenti");
                 return false;
             }
-            return true;
-        }
-    </script>
+            //invio dati con AJAX
+            // Creazione dell'oggetto XMLHttpRequest
+            var xhr = new XMLHttpRequest();
+            // Definizione della funzione da eseguire al completamento della richiesta
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    if (xhr.status === 200) {
+                        // Reindirizza alla pagina principale in caso di successo
+                        window.location.href = 'home.html';
+                    } else {
+                        // Gestisci eventuali errori
+                        console.error('Errore:', xhr.responseText);
+                    }
+                }
+            };
+            // Impostazione della richiesta POST al server Flask
+            xhr.open('POST', '/registrazione', true);
+            xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+
+            // Creazione della stringa dei dati da inviare
+            var data = 'nome=' + encodeURIComponent(nome) + '&cognome=' + encodeURIComponent(cognome) + '&email=' + encodeURIComponent(email) + '&password=' + encodeURIComponent(password) + '&facolta=' + encodeURIComponent(facolta);
+
+            // Invio della richiesta con i dati
+            xhr.send(data);
+                return true;
+        };
+   </script>  
 </head>
 <body>
     <div class="card">
         <h4 class="title">Sign in</h4>
-        <form name="registr">
+        <form name="registr" action="/registrazione" method="POST">
             <div class="field">
                 <path d="M207.8 20.73c-93.45 18.32-168.7 93.66-187 187.1c-27.64 140.9 68.65 266.2 199.1 285.1c19.01 2.888 36.17-12.26 36.17-31.49l.0001-.6631c0-15.74-11.44-28.88-26.84-31.24c-84.35-12.98-149.2-86.13-149.2-174.2c0-102.9 88.61-185.5 193.4-175.4c91.54 8.869 158.6 91.25 158.6 183.2l0 16.16c0 22.09-17.94 40.05-40 40.05s-40.01-17.96-40.01-40.05v-120.1c0-8.847-7.161-16.02-16.01-16.02l-31.98 .0036c-7.299 0-13.2 4.992-15.12 11.68c-24.85-12.15-54.24-16.38-86.06-5.106c-38.75 13.73-68.12 48.91-73.72 89.64c-9.483 69.01 43.81 128 110.9 128c26.44 0 50.43-9.544 69.59-24.88c24 31.3 65.23 48.69 109.4 37.49C465.2 369.3 496 324.1 495.1 277.2V256.3C495.1 107.1 361.2-9.332 207.8 20.73zM239.1 304.3c-26.47 0-48-21.56-48-48.05s21.53-48.05 48-48.05s48 21.56 48 48.05S266.5 304.3 239.1 304.3z"></path></svg>
                 <input autocomplete="off" id="Name" placeholder="Name" class="input-field">
@@ -54,7 +89,7 @@
                 <path d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z"></path></svg>
                 <input autocomplete="off" id="confpwd" placeholder="Confirm Password" class="input-field" type="password">
             </div>
-            <button class="btn" type="submit" onclick="validateSign()">Sign in</button>
+            <button class="btn" type="button" onclick="validateSign()">Sign in</button>
         </form>
     </div>
 </body>
