--- a/templates/stile homepage.css
+++ b/templates/stile homepage.css
@@ -1,4 +1,11 @@
-body,html {font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; line-height: 1; font-size: 16px ; margin: 0; padding: 0;}
+body,html {
+  font-family: 'Helvetica Neue', sans-serif;
+  line-height: 1; font-size: 16px ;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  background-color: #f2f2f2;
+}
 
 
 .header {
@@ -6,36 +13,50 @@ body,html {font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI'
   border-bottom: 5px solid #e4e4e4;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: 10px 2% 10px 2%;
+  margin: 0;
+  background-color: #fff;
 }
 
 .logo {
-  display: flex;
+  display: flex
 }
 
 .sign{
   display: flex;
-  border: 3px none;
+  border: 3px  ;
   justify-content: space-between;
   align-items: center;
-}
-
-.signup {
-  display: flexbox;
-  justify-content: space-between;
-  color: #ffffff;
-  border: solid 5px #881c1c;
-  background-color: #881c1c;
-  border-radius: 3px;
+  font-size: 12px;
 }
 
 .signin {
   display: flex;
   justify-content: space-between;
+  align-items:center;
+  border: solid 5px #881c1c;
+  background-color: #881c1c;
+  border-radius: 3px;
+  margin: 3px;
+  padding: 3px;
+}
+
+.reg {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 4px;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
   color: #881c1c;
   border: solid 5px #eaeaea;
   background-color: #eaeaea;
+  text-decoration: none;
   border-radius: 3px;
+  margin: 3px;
+  padding: 3px;
 }
 
 .menu {
@@ -43,4 +64,57 @@ body,html {font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI'
   border-bottom: 5px solid #e4e4e4;
   justify-content: space-between;
   align-items: center;
+  font-weight: bold ;
+  background-color: #fff;
+  padding: 1% 0 0.5% 2%;
+  margin: 0;
+}
+
+.menu ul{padding: 0px; margin: 0;}
+.menu li {display: inline-block ;}
+.menu a {text-decoration: none ; color: black; padding: 5px 10px; display: block;}
+.menu li ::after{
+  content: '';
+  width: 0%;
+  height: 3px;
+  background: #881c1c;
+  border-radius: 3px;
+  display: block;
+  margin:auto;
+  margin-top: 3px;
+  transition: 0.5s;
+}
+.menu li :hover::after {
+  width: 100%;
+}
+
+
+
+.bacheca {
+  display: flex;
+  border: 3px solid #881c1c;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+
+.spot {
+  display: grid;
+  width: 100%;
+  background-color:  #5c64cd;
+  border: #19de0b solid 3px;
+  margin: 20px;
+  padding: 20px;
+}
+
+.filtri {
+  display: flex;
+  width: 30%;
+  background-color: rgb(16, 148, 242);
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;  
 }
