--- a/templates/home.html
+++ b/templates/home.html
@@ -30,30 +30,66 @@
             <li><a href="">Quiz</a></li>
         </ul>   
     </nav>
-    
-    <ul class="bacheca">
-        <div class="spot">
-            <a href="">Spotto persone!!</a>
-            <a href="">Spotto !!</a>
-            <a href=""> persone!!</a>
+
+
+
+
+
+    <div class="bacheca">
+        <div class="riquadrospot">
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>        
+
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
+            <div>
+                <a href="" class="spot">Spotto persone!!</a>
+            </div>
         </div>
-        <a href="" class="filtri">Filtri
-            Facoltà <select name="" id="Facoltà">
-                <option value="Nessuna">Nessuna</option>
-                <option value="Architettura">Architettura</option>
-                <option value="Economia">Economia</option>
-                <option value="Farmacia e medicina">Farmacia e medicina</option>
-                <option value="Giurisprudenza">Giurisprudenza</option>
-                <option value="Ingegneria civile e industriale">Ingegneria civile e industriale</option>
-                <option value="Ingegneria dell'informazione, informatica e statistica">Ingegneria dell'informazione, informatica e statistica</option>
-                <option value="Lettere e filosofia">Lettere e filosofia</option>
-                <option value="Medicina e odontoiatria">Medicina e odontoiatria</option>
-                <option value="Medicina e psicologia">Medicina e psicologia</option>
-                <option value="Scienze matematiche, fisiche e naturali">Scienze matematiche, fisiche e naturali</option>
-                <option value="Scienze politiche sociologia comunicazione">Scienze politiche sociologia comunicazione</option>
-            </select>
-        </a>
-    </ul>
+        <div class="filtri">
+            <a href="">Filtri
+                Facoltà <select name="" id="Facoltà">
+                    <option value="Nessuna">Nessuna</option>
+                    <option value="Architettura">Architettura</option>
+                    <option value="Economia">Economia</option>
+                    <option value="Farmacia e medicina">Farmacia e medicina</option>
+                    <option value="Giurisprudenza">Giurisprudenza</option>
+                    <option value="Ingegneria civile e industriale">Ingegneria civile e industriale</option>
+                    <option value="Ingegneria dell'informazione, informatica e statistica">Ingegneria dell'informazione, informatica e statistica</option>
+                    <option value="Lettere e filosofia">Lettere e filosofia</option>
+                    <option value="Medicina e odontoiatria">Medicina e odontoiatria</option>
+                    <option value="Medicina e psicologia">Medicina e psicologia</option>
+                    <option value="Scienze matematiche, fisiche e naturali">Scienze matematiche, fisiche e naturali</option>
+                    <option value="Scienze politiche sociologia comunicazione">Scienze politiche sociologia comunicazione</option>
+                </select>
+                </a>
+        </div>
+        
+        
+    </div>
+
+<script>
+    porcodio
+</script>
+
+
 
 </body>
 </html>
