--- a/static/stile.css
+++ b/static/stile.css
@@ -31,6 +31,9 @@ h1 {font-size: 16px;color: #881c1c;}
     width: 100%;
     color: black;
    }
+   .input-field::placeholder {
+    color: black; 
+  }
    
    /*Text*/
    .title {
